[gd_scene load_steps=9 format=3 uid="uid://denxkkowup8rn"]

[ext_resource type="Script" uid="uid://c4j8hf1vby0ep" path="res://Gamestuffs/Dialoguestuffs/Diag.gd" id="1_1ie7r"]
[ext_resource type="Texture2D" uid="uid://dffcea8aybcsl" path="res://Gamestuffs/Dialoguestuffs/Sprites/balaoDeFala.png" id="2_3mn5t"]
[ext_resource type="AudioStream" uid="uid://cs0gesu2ispb7" path="res://Gamestuffs/Sounds/Commons/tick.ogg" id="2_x2y7r"]
[ext_resource type="Texture2D" uid="uid://djv341tn10sev" path="res://Playerstuffs/Characters/Neon/DiagName.png" id="3_x2y7r"]
[ext_resource type="FontFile" uid="uid://dq61mghtm7weo" path="res://Gamestuffs/Fonts/general.fnt" id="7_i3gq3"]
[ext_resource type="Shader" uid="uid://cctpja4krhfbv" path="res://Shaders/blur.gdshader" id="9_6sqdm"]
[ext_resource type="Texture2D" uid="uid://chgixm61v6lbr" path="res://Shaders/white.png" id="10_lpuaw"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_lem3t"]
shader = ExtResource("9_6sqdm")
shader_parameter/amount = 0.0

[node name="DialogueScene" type="Node2D"]
z_index = 1192
script = ExtResource("1_1ie7r")

[node name="Sounds" type="Node" parent="."]

[node name="TickSound" type="AudioStreamPlayer" parent="Sounds"]
stream = ExtResource("2_x2y7r")

[node name="DialogueCanvas" type="CanvasLayer" parent="."]
follow_viewport_scale = 0.001

[node name="BlurFx" type="TextureRect" parent="DialogueCanvas"]
material = SubResource("ShaderMaterial_lem3t")
anchors_preset = -1
anchor_left = -11.135
anchor_top = -6.3550005
anchor_right = 12.344001
anchor_bottom = 8.056001
offset_left = 8111.0
offset_top = 2652.5002
offset_right = 7283.96
offset_bottom = 2197.4202
texture = ExtResource("10_lpuaw")

[node name="Control" type="Control" parent="DialogueCanvas"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -21.0
offset_right = 20.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2

[node name="CharName" type="Sprite2D" parent="DialogueCanvas/Control"]
z_index = 9
position = Vector2(310, 157)
texture = ExtResource("3_x2y7r")

[node name="BalaoDeFala" type="Sprite2D" parent="DialogueCanvas/Control"]
z_index = 7
position = Vector2(14, 208)
texture = ExtResource("2_3mn5t")

[node name="RichTextLabel" type="RichTextLabel" parent="DialogueCanvas/Control"]
z_index = 10
layout_mode = 0
offset_left = -353.0
offset_top = 174.0
offset_right = 405.0
offset_bottom = 256.0
theme_override_colors/default_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/paragraph_separation = -6
theme_override_fonts/normal_font = ExtResource("7_i3gq3")
theme_override_font_sizes/normal_font_size = 18
bbcode_enabled = true
text = "voce esta me deixando [shake amp=50]bravo...[/shake]"
fit_content = true

[node name="PortraitRightPos" type="Node2D" parent="DialogueCanvas/Control"]
position = Vector2(275, 127)

[node name="PortraitLeftPos" type="Node2D" parent="DialogueCanvas/Control"]
position = Vector2(-235, 127)
